fix(collision): harden G1 registry boundaries