@@ -1,10 +1,13 @@
 package io.github.r3neer.scalebrews.collision.api;
 
 import io.github.r3neer.scalebrews.collision.api.spi.BodyAdapter;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.TreeMap;
 import net.minecraft.resources.Identifier;
 
 /** Public init-time registry for body adapters; registration never transfers physics ownership. */
@@ -26,5 +29,9 @@ public final class CollisionAdapters {
         return Optional.ofNullable(BODIES.get(entityType));
     }
 
-    public static synchronized Map<Identifier, BodyAdapter> bodySnapshot() { return Map.copyOf(BODIES); }
+    public static synchronized Map<Identifier, BodyAdapter> bodySnapshot() {
+        var sorted = new TreeMap<Identifier, BodyAdapter>(Comparator.comparing(Identifier::toString));
+        sorted.putAll(BODIES);
+        return Collections.unmodifiableMap(new LinkedHashMap<>(sorted));
+    }
 }
